--- a/index.html
+++ b/index.html
@@ -4,32 +4,38 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>404-Not-Found-Challenge</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-    <div class="header">
-      <div class="header-text">404 Not Found</div>
-    </div>
-    <div class="card-wrapper">
-      <div class="crow-image">
+    <header>
+      <p><a href="#">04 Not Found</a></p>
+    </header>
+    <main>
+      <div class="left-side">
         <img src="Scarecrow.jpg" alt="Picture of a Colorful Scarecrow" />
       </div>
-      <div class="card-text">
+      <div class="right-side">
         <h1>I have bad news for you</h1>
         <p>
           The page you are looking for might be removed or is temporarily
           unavailable
         </p>
+        <button
+          class="back-button"
+          type="button"
+          alt="Back to the Homepage button"
+        >
+          BACK TO THE HOMEPAGE
+        </button>
       </div>
-      <button
-        class="back-button"
-        type="button"
-        alt="Back to the Homepage button"
-      >
-        BACK TO THE HOMEPAGE
-      </button>
-    </div>
-    <div class="footer">created by vicdatrader - devChallenges.io</div>
+    </main>
+    <footer>created by vicdatrader - devChallenges.io</footer>
   </body>
 </html>
