--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link href="style.css" rel="stylesheet" type="text/css" />
@@ -19,7 +19,11 @@
     </header>
     <main>
       <div class="left-side">
-        <img src="Scarecrow.jpg" alt="Picture of a Colorful Scarecrow" />
+        <img
+          src="Scarecrow.jpg"
+          alt="Picture of a Colorful Scarecrow"
+          class="hero-img"
+        />
       </div>
       <div class="right-side">
         <h1>I have bad news for you</h1>
