--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>404-Not-Found-Challenge</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,36 +10,29 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <header>
-      <p><a href="#">04 Not Found</a></p>
+      <a href="#" class="logo">404 Not Found </a>
     </header>
-    <main>
-      <div class="left-side">
-        <img
-          src="Scarecrow.jpg"
-          alt="Picture of a Colorful Scarecrow"
-          class="hero-img"
-        />
+    <div class="card-wrapper">
+      <div class="card-img">
+        <img src="Scarecrow.jpg" alt="Picture of a Colorful Scarecrow" />
       </div>
-      <div class="right-side">
+
+      <div class="card-text">
         <h1>I have bad news for you</h1>
-        <p>
+        <p class="info">
           The page you are looking for might be removed or is temporarily
           unavailable
         </p>
-        <button
-          class="back-button"
-          type="button"
-          alt="Back to the Homepage button"
-        >
-          BACK TO THE HOMEPAGE
-        </button>
+        <a href="#" class="btn" target="_blank">back to home page</a>
       </div>
-    </main>
-    <footer>created by vicdatrader - devChallenges.io</footer>
+    </div>
+    <footer>
+      <p class="f-text">created by GloBoiVic - devChallenges.io</p>
+    </footer>
   </body>
 </html>
