Add CSS styling to span

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <footer>
-      <p class="f-text">created by GloBoiVic - devChallenges.io</p>
+      <p class="f-text">created by <span>GloBoiVic</span> - devChallenges.io</p>
     </footer>
   </body>
 </html>
